@@ -56,6 +56,7 @@
         Krzysztof A. Ko&#347;ciuszkiewicz,
         Christian Kopf,
         Jeffrey Kuhn,
+        Uwe Kuehn,
         Alex Montgomery,
         Ambrogio Oliva,
         Stephan Rave,
