@@ -22,6 +22,8 @@
     - Improvements to IEEEXplore fetcher - better handling of month and page fields.
     - Changed behaviour of source panel when an entry contains imbalanced # characters -
       the panel can now show the entry in its invalid form, allowing the user to fix the problem.
+    - Fixed bug in parsing file field - double spaces in file names would be reduced to single
+      spaces, breaking the file link. Fix submitted by Uwe Kuehn.
     - Fixed bug in HTMLConverter.
     - Fixed NullPointerException in key generator for incomplete names.
     - Fixed bug in removing custom export filters.
